--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -1,30 +1,106 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-Nav {
-  color: white;  
-  height: 70px;
-  font-size: 30px;
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
   
-}
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+  Nav {
+    color: white;  
+    height: 70px;
+    font-size: 30px;
+    
+  }
+  
+  Nav Link{
+    float: left;
+    display: block;  
+  }
+  
+  .active {
+    text-decoration: none !important;
+    color: black;
+  }
+  
+  #icon{
+    width: 60px;
+    height: 60px;
+    border-style: solid;
+    border-width: 5px;
+    margin: 10px;
+  }
+  
+  #iconDiv{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    margin-top: 180vh;
+  }
+  
+  #sections{
+    margin-top: -70px;
+  }
 
-Nav Link{
-  float: left;
-  display: block;  
-}
 
-.active {
-  text-decoration: none !important;
-  color: black;
+
+@media screen and (max-width:1000px) {
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+  Nav {
+    color: white;  
+    height: 70px;
+    font-size: 16px;
+    width: 100vw;
+  }
+  
+  Nav Link{
+    float: left;
+    display: block;  
+  }
+  
+  .active {
+    text-decoration: none !important;
+    color: black;
+  }
+  
+  #icon{
+    width: 40px;
+    height: 40px;
+    border-style: solid;
+    border-width: 5px;
+    margin: 10px;
+  }
+  
+  #iconDiv{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    margin-top: 170vh;
+    margin-left: 30vh;
+  }
+  
+  #sections{
+    margin-top: -70px;
+  }
+
 }
