--- a/my-portfolio/src/portfolio.css
+++ b/my-portfolio/src/portfolio.css
@@ -1,4 +1,5 @@
-button {
+
+  button {
     display: inline-block;
     text-align: center;
     font-size: 25px;
@@ -8,6 +9,10 @@ button {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
+    margin-left: 100px;
+    margin-top: 70px;
+    color: white;
+    background-image: url("./photos/project1.jpg");
   }
 
 button span {
@@ -35,3 +40,93 @@ button:hover span:after {
    right: 0;
 }
 
+.Portfolio{
+  height: 100vh;
+  background-image: url("./photos/port_back.jpg");
+  background-size: cover;
+  padding-top: 70px;
+}
+
+.popupWindow{
+  z-index: 4;
+  color: black;
+}
+
+.link{
+  text-decoration: none;
+}
+
+
+
+
+
+
+@media screen and (max-width:1000px) {
+  button {
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 2px;
+    margin-left: 50px;
+    margin-top: 50px;
+    color: white;
+    background-image: url("./photos/project1.jpg");
+  }
+
+button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+  
+button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10px;
+    transition: 0.5s;
+}
+
+button:hover span {
+    padding-right: 10px;
+  }
+  
+button:hover span:after {
+   opacity: 1;
+   right: 0;
+}
+
+.Portfolio{
+  height: 100vh;
+  width: 100vw;
+  background-image: url("./photos/port_back.jpg");
+  background-size: cover;
+  padding-top: 70px;
+}
+
+.popupWindow{
+  z-index: 4;
+  color: black;
+  font-size: 10px;
+}
+
+.link{
+  text-decoration: none;
+}
+
+.h2popup{
+  font-size: 15px;
+}
+
+.ppopup{
+  font-size: 10px;
+}
+
+}
