--- a/src/contact.css
+++ b/src/contact.css
@@ -10,8 +10,8 @@
         border-width: 1px;
         text-align: center;
         border-style: solid;
-        width: 500px;
-        height: 700px;
+        width: 40vw;
+        height: 80vh;
         background-image: url('./photos/forest.jpg');
         background-size: cover;
         color: white;
@@ -22,32 +22,47 @@
     }
     
     #col1{
+        align-items: center;
         text-align: center;
-        font-size: 10px;
-        padding: 50px;
+        
+        padding: 10vw;
         padding-top: 0px;
     }
     
     #row1{
-        width: 400px;
         margin-top: 10px;
         text-align: center;
+        font-size: 1vw;
     }
     
     .form-control{
-        width: 400px;
+        width: 20vw;
+        height: 2vw;
+        text-align: center;
+        font-size: 1vw;
+    }
+    
+    .pcontactme{
+        align-items: center;
+        margin-top: 1px;
+        font-size: 1vw;
         text-align: center;
     }
     
-    p{
-        font-size: 20px;
-    }
-    
     #message{
-        width: 400px;
-        height: 300px;
+        width: 20vw;
+        height: 25vh;
         padding-top: 0;
         padding-bottom: 0px;
+        font-size: 1vw;
+    }
+
+    #buttonsubmit{
+        width: 4vw;
+        height: 4vh;
+        font-size: 1vw;
+        text-align: center;
+        padding: 0;
     }
 }
 
@@ -58,13 +73,11 @@
         height: 100vh;
         margin-top: 90px;
         width: 100vw;
-        padding: auto;
+        padding-top: 1vw;
+        padding-bottom: 1vw;
     }
 
-    .formform{
-        width: 300px;
-        
-    }
+    
     
     .formStyle{
         border-radius: 10%;
@@ -72,8 +85,8 @@
         border-width: 1px;
         text-align: center;
         border-style: solid;
-        width: 100vw;
-        height: 400px;
+        width: 80vw;
+        height: 80vh;
         background-image: url('./photos/forest.jpg');
         background-size: cover;
         color: white;
@@ -84,31 +97,46 @@
     }
     
     #col1{
+        align-items: center;
         text-align: center;
-        font-size: 10px;
-        padding: 100px;
+        
+        padding: 10vw;
         padding-top: 0px;
     }
     
     #row1{
-        width: 220px;
         margin-top: 10px;
         text-align: center;
+        font-size: 2vw;
     }
     
     .form-control{
-        width: 220px;
+        width: 30vw;
+        height: 2vw;
+        text-align: center;
+        font-size: 1vw;
+    }
+    
+    .pcontactme{
+        align-items: center;
+        margin-top: 1px;
+        font-size: 3vw;
         text-align: center;
     }
     
-    p{
-        font-size: 10px;
-    }
-    
     #message{
-        width: 220px;
-        height: 100px;
+        width: 30vw;
+        height: 25vh;
         padding-top: 0;
         padding-bottom: 0px;
+        font-size: 1vw;
+    }
+
+    #buttonsubmit{
+        width: 10vw;
+        height: 4vh;
+        font-size: 2vw;
+        text-align: center;
+        padding: 0;
     }
 }
