--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -1,4 +1,4 @@
-
+@media screen and (max-width:3550px){
     .amcontainer{
         font-size: 25px;
         margin-left: 50px;
@@ -38,7 +38,7 @@
         text-decoration: none;
     }
 
-
+}
 @media screen and (max-width:1000px) {
     .amcontainer{
         font-size: 10px;
