--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-
+@media screen and (max-width:3550px){
   body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -48,7 +48,7 @@
   #sections{
     margin-top: -70px;
   }
-
+}
 
 
 @media screen and (max-width:1000px) {
